# Argus

./: .clang-tidy  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  argus.def  meson.build  meson.options  meson_options.txt  mkdocs.yml  netlify.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml  build.yml  examples.yml  gen-hashs.yml  lint.yml  release.yml  test-windows.yml  test.yml  tests.yml
benchmarks/: benchmark_release_mode.c  meson.build
cross-files/: i686-linux-gnu.txt
docs/: docusaurus.config.js  package.json  sidebars.js
docs/assets/: llm-references.md
docs/docs/advanced/: custom-handlers.md  custom-validators.md
docs/docs/api-reference/: error-codes.md  overview.md  regex-patterns.md
docs/docs/appendices/: cheat-sheet.md  contributing.md
docs/docs/examples/: configuration-tool.md  git-like.md  simple-cli.md
docs/docs/features/: collections.md  environment.md  subcommands.md  validation.md
docs/docs/fundamentals/: accessing-values.md  basic-options.md  help-and-errors.md  option-formats.md
docs/docs/getting-started/: installation.md  intro.md  quickstart.md
docs/en/: contributing.md  index.md
docs/en/advanced/: custom-handlers.md  custom-validators.md  multi-values.md  nested-commands.md  regex.md
docs/en/api/: functions.md  macros.md  overview.md  regex_patterns.md  types.md
docs/en/guide/: basic-options.md  installation.md  multi-values.md  option-formats.md  quickstart.md  subcommands.md  validation.md
docs/fr/: contributing.md  index.md
docs/fr/advanced/: custom-handlers.md  custom-validators.md  multi-values.md  nested-commands.md  regex.md
docs/fr/api/: functions.md  macros.md  overview.md  regex_patterns.md  types.md
docs/fr/examples/: basic.md
docs/fr/guide/: basic-options.md  environment.md  installation.md  multi-values.md  option-formats.md  quickstart.md  subcommands.md  validation.md
docs/src/components/: CodeComparison.js  FinalCTA.js  Hero.js  WhyChooseSection.js
docs/src/css/: custom.css
docs/src/pages/: index.js
examples/: advanced_options.c  basic_usage.c  custom_handlers.c  env_vars.c  meson.build  multi_values.c  nested_commands.c  positional_args.c  regex.c  subcommands.c  validators.c  variadic_positional.c
includes/: argus.h
includes/argus/: api.h  callbacks.h  errors.h  options.h  regex.h  types.h
includes/argus/internal/: compiler.h  context.h  cross_platform.h  display.h  help.h  help_formatter.h  help_organizer.h  help_renderer.h  parsing.h  stream.h  utils.h  windows_compat.h
includes/argus/internal/callbacks/: handlers.h  validators.h
includes/argus/internal/platform/: windows.h
packaging/conan/: conandata.yml  conanfile.py
packaging/conan/test_package/: CMakeLists.txt  conanfile.py  test_package.c
packaging/installers/: install.sh
packaging/vcpkg/: argus.json  portfile.cmake  vcpkg.json
packaging/wrapdb/: argus.wrap
packaging/xmake/: xmake.lua
source/: meson.build
source/api/: argus_display.c  argus_exec.c  argus_free.c  argus_init.c  argus_parse.c  argus_value_access.c  meson.build
source/callbacks/handlers/: array_float_handler.c  array_int_handler.c  array_string_handler.c  bool_handler.c  default_free.c  flag_handler.c  float_handler.c  help_handler.c  int_handler.c  map_bool_handler.c  map_float_handler.c  map_int_handler.c  map_string_handler.c  meson.build  string_handler.c  variadic_float_handler.c  variadic_int_handler.c  variadic_string_handler.c  version_handler.c
source/callbacks/validators/: choices_validator.c  count_validator.c  length_validator.c  meson.build  range_validator.c  regex_validator.c
source/core/: context.c  error.c  meson.build
source/core/parsing/: execute_callbacks.c  load_env_vars.c  option_handle_long.c  option_handle_positional.c  option_handle_short.c  option_handle_subcommand.c  parse_args.c  post_parse_validation.c
source/core/validation/: validate_arguments.c  validate_containers.c  validate_structure.c
source/display/: command_display.c  help_display.c  help_formatter.c  help_organizer.c  help_renderer.c  meson.build  usage_display.c  version_display.c
source/display/help/: help_formatter.c  help_organizer.c  help_renderer.c  meson.build
source/utils/: meson.build  multi_values.c  option_lookup.c  stream.c  strings.c  value_utils.c
tests/fonctionnel/: meson.build  test_api.c  test_basic_usage.c  test_env.c  test_multi_values.c  test_variadic_usage.c
tests/integration/: meson.build  test_edge_case.c  test_parsing.c  test_positional_edge_case.c  test_post_validation.c  test_subcommand_edge_case.c  test_subcommands.c  test_validation.c  test_validators.c  test_variadic_positional.c
tests/unit/: meson.build  test_robustness.c  test_smart_hint.c
tests/unit/test_callbacks/: test_handlers.c  test_validators.c
tests/unit/test_core/: test_context.c  test_debug_mode.c  test_error.c  test_release_mode.c
tests/unit/test_utils/: test_multi_values.c  test_option_lookup.c  test_strings.c  test_value_utils.c
