option('tests', type: 'boolean', value: false, description: 'Enable tests')
option('examples', type: 'boolean', value: false, description: 'Build example programs')
option('benchmarks', type: 'boolean', value: false, description: 'Build benchmark programs')
option('regex', type: 'boolean', value: true, description: 'Disable regex support (removes PCRE2 dependency)')
option('pcre2_include_dir', type: 'string', value: '', description: 'Custom include directory for PCRE2')
option('pcre2_lib_dir', type: 'string', value: '', description: 'Custom library directory for PCRE2')
