# Compile all subdirectories to collect sources
subdir('utils')
subdir('callbacks')
subdir('api')
subdir('core')
subdir('display')

# Collect all sources
argus_sources = []
argus_sources += utils_sources
argus_sources += callbacks_sources
argus_sources += api_sources
argus_sources += core_sources
argus_sources += display_sources
